--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <link rel="stylesheet" href="style.css">
     
     <!-- import the webpage's javascript file -->
-    <script src="share.js" defer></script>
+    
     <script src="common.js" defer></script>
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#4a148c">
   </head>  
   <body>
     <h1>
-      Web Share API
+      Web Share API vivek
     </h1>
     <p id="requireHTTPS" class="hidden">
       <b>STOP!</b> This page <b>must</b> be served over HTTPS.
